# 2020-Linux-Development

03_TerminalProject/: Makefile  README.md  Show  Show.c
04_Multifile/: Makefile  fun.c
05_Environmental/: CMakeLists.txt  pcre.c
06_Debugging/: README.md  program.c
07_DebuggingTracing/: Makefile  fake_rm.c
08_TestingCoverage/: Makefile.am  configure.ac
08_TestingCoverage/src/: buf.h
09_I18nL10n/: Makefile.am  binaryguess.c  binaryguess.pot  binaryguess_ru.po  configure.ac
10_Documenting/: Makefile.am  binaryguess.c  binaryguess.man.1  binaryguess.pot  binaryguess_ru.po  rom.py
11_Toolkits/: Makefile.am  configure.ac  wordcount.c
12_ScriptingText/: configure.ac
12_ScriptingText/src/: Makefile.am
13_PatchInstall/: Makefile.am  binaryguess.c  binaryguess.pot  binaryguess_ru.po  configure.ac
